Fix heading sizes on smaller widths

--- a/src/sass/responsive/_type.scss
+++ b/src/sass/responsive/_type.scss
@@ -34,13 +34,12 @@ h2 .parentlink {
 h3, h4, h5, h6 { 
   font-family: "OpenSans", $sans-font-stack; }
 
-h1 { margin:30px 0px 10px; }
-h2 { margin:25px 0px 10px; }
-h3 { margin:20px 0px 10px; line-height:1.25; }
-h4 { margin:15px 0px 10px; line-height:1.3; }
-h5 { margin:10px 0px 10px; line-height:1.3; }
-h6 { margin:10px 0px 10px; line-height:1.3; }
-
+h1 { font-size:    2em; margin:30px 0px 10px; }
+h2 { font-size: 1.65em; margin:25px 0px 10px; }
+h3 { font-size: 1.25em; margin:20px 0px 10px; line-height:1.25; }
+h4 { font-size:  1.1em; margin:15px 0px 10px; line-height:1.3; }
+h5 { font-size:    1em; margin:10px 0px 10px; line-height:1.3; }
+h6 { font-size:   .9em; margin:10px 0px 10px; line-height:1.3; }
 
 
 
